--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "scripts": {
-    "dev": "vite dev"
+    "dev": "vite dev",
+    "build" : "vite build",
+    "preview" : "vite preview --port 8080"
   },
   "devDependencies": {
     "vite": "^4.4.9"
